linear regression test

--- a/content/linear_regression_test.html
+++ b/content/linear_regression_test.html
@@ -3,7 +3,10 @@
 <head><meta charset="utf-8" />
 <title>Linear Regression Test</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
+<meta name="tags" content="python, bokeh, jupyter, data science" />
+<meta name="date" content="2017-04-02" />
+<meta name="category" content="notebooks" />
+<meta name="summary" content="Linear regression example using Bokeh" />
 <style type="text/css">
     /*!
 *
